# skia

./: .gitignore  .gn  BUILD.gn  DEPS  sk4d-build.bat  sk4d-build.sh
gn/: BUILDCONFIG.gn  skia.gni
gn/portable/: BUILD.gn
gn/skia/: BUILD.gn
gn/toolchain/: BUILD.gn
include/core/: SkTypes.h
include/effects/: SkRuntimeEffect.h
modules/particles/include/: SkReflected.h
modules/particles/src/: SkParticleEffect.cpp  SkReflected.cpp
modules/skcms/: BUILD.gn
modules/skparagraph/: skparagraph.gni
modules/skparagraph/include/: DartTypes.h  TextStyle.h
modules/skparagraph/src/: Run.h  TextStyle.cpp
sk4d/include/: sk4d_version.h
sk4d/include/c/: gr4d_backendsemaphore.h  gr4d_backendsurface.h  gr4d_backendsurfacemutablestate.h  gr4d_contextoptions.h  gr4d_directcontext.h  gr4d_gl_interface.h  gr4d_shadererrorhandler.h  gr4d_vk_extensions.h  sk4d_animatedwebpencoder.h  sk4d_blender.h  sk4d_canvas.h  sk4d_codec.h  sk4d_colorfilter.h  sk4d_colorspace.h  sk4d_data.h  sk4d_document.h  sk4d_font.h  sk4d_graphics.h  sk4d_image.h  sk4d_imageencoder.h  sk4d_imagefilter.h  sk4d_maskfilter.h  sk4d_paint.h  sk4d_path.h  sk4d_pathbuilder.h  sk4d_patheffect.h  sk4d_pathmeasure.h  sk4d_picture.h  sk4d_picturerecorder.h  (+16 more)
sk4d/miscellaneous/: sk4d_dtoa.cpp  sk4d_dtoa.h
sk4d/scripts/: build.py
src/core/: SkBlitter_ARGB32.cpp  SkDraw_text.cpp  SkMathPriv.h  SkRegion.cpp  SkScan_Path.cpp
src/ports/: SkFontHost_win.cpp  SkMemory_malloc.cpp  SkScalerContext_win_dw.cpp
src/utils/: SkBase64.cpp  SkParse.cpp  SkParsePath.cpp
src/xps/: SkXPSDevice.cpp  SkXPSDevice.h
(+105 files in other folders)
