# Copyright 2022 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("skcms.gni")

static_library("skcms") {
  cflags = []

  # Clang CL driver does not use the "-std=c11" flag at the same time as it accepts the "/std:c11",
  # although the MSVC CL compiler does not accept it with "/std:c++17", so for reasons of
  # compatibility we will keep it that way, but in the future it requires a research on the real need.
  if (is_clang && !win_clang) {
    if (is_win) {
      cflags += [ "/std:c11" ]
    } else {
      cflags += [ "-std=c11" ]
    }
  }

  public = skcms_public_headers
  sources = skcms_sources
}
